# terminal-ai-chess

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/ai-chess/: chess.db  main.py  rules.txt
src/ai-chess/pieces/: pieces
